--- a/index.html
+++ b/index.html
@@ -1,14 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-02</title>
+    <title>goit-markup-hw-01</title>
+    <link rel="stylesheet" href="./prettierrs/prettierrs.json" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>для дз 2</header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <nav>
+        <a href="./index.html" lang="en">WebStudio</a>
+        <ul>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./index.html">Портфолио</a></li>
+          <li><a href="./index.html">Контакты</a></li>
+        </ul>
+      </nav>
+      <!-- contacts -->
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com" title="Написать письмо">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+380961111111" title="Позвонить">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <main>
+      <!-- Slogan and button -->
+      <section>
+        <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <!--Peculiarities-->
+      <section>
+        <!--h2 будет скрыт, при подклюсчении СSS-->
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНОСТЬ</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНИРОВАНИЕ</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+      <!--What are we doing-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/box-1.jpg"
+              alt="Разработчик верстает сайт с помощью компьютера, планшета, клавиатуры и заметок"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/box-2.jpg"
+              alt="Разработчик работает над разметкой сайта. Использует: смартфон, ноутбук, компьютер"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/box-3.jpg"
+              alt="Цветовая палитра на планшете."
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <!--Our team-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./images/photo-1.jpg" alt="Мужчина" width="270" height="260" />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/photo-2.jpg" alt="Женищина" width="270" height="260" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/photo-3.jpg" alt="Мужчина" width="270" height="260" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/photo-4.jpg" alt="Мужчина" width="270" height="260" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="/" lang="en">WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/pNAWCtYSXBHjVTxV9"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com" title="Написать письмо">info@example.com</a>
+          </li>
+          <li>
+            <a href="+380961111111" title="Позвонить">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
