--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo-link" href="./index.html" lang="en"
-          ><span class="logo-first-part">Web</span><span class="logo-second-part">Studio</span></a
+        <a class="logo" href="./index.html" lang="en"
+          ><span class="logo-first-part">Web</span
+          ><span class="logo-second-dark-part">Studio</span></a
         >
         <ul class="header-nav-list">
-          <li class="header-nav-item"><a class="header-nav-link" href="./index.html">Студия</a></li>
+          <li class="header-nav-item">
+            <a class="header-nav-link active" href="./index.html">Студия</a>
+          </li>
           <li class="header-nav-item">
             <a class="header-nav-link" href="./portfolio.html">Портфолио</a>
           </li>
@@ -45,7 +48,7 @@
     <main class="studio-main">
       <!-- Slogan and button -->
       <section class="hero">
-        <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!--features-->
@@ -54,25 +57,25 @@
         <h2 class="features-title">Особенности</h2>
         <ul class="features-list">
           <li class="features-item">
-            <h3 class="features-title-secondary">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <h3 class="features-title-secondary">Внимание к деталям</h3>
             <p class="features-text">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title-secondary">ПУНКТУАЛЬНОСТЬ</h3>
+            <h3 class="features-title-secondary">Пунктуальность</h3>
             <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title-secondary">ПЛАНИРОВАНИЕ</h3>
+            <h3 class="features-title-secondary">Планирование</h3>
             <p class="features-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li class="features-item">
-            <h3 class="features-title-secondary">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <h3 class="features-title-secondary">Современные технологии</h3>
             <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
@@ -136,7 +139,6 @@
               height="260"
             />
             <h3 class="team-title-secondary">Ольга Репина</h3>
-            class="team-title-secondary"
             <p class="team-text" lang="en">Frontend Developer</p>
           </li>
           <li class="team-item">
@@ -165,14 +167,15 @@
       </section>
     </main>
     <footer class="footer" id="contacts">
-      <a class="footer-logo-link" href="./index.html" lang="en"
-        ><span class="logo-first-part">Web</span><span class="logo-second-part">Studio</span></a
+      <a class="logo" href="./index.html" lang="en"
+        ><span class="logo-first-part">Web</span
+        ><span class="logo-second-light-part">Studio</span></a
       >
       <address class="footer-address">
         <ul class="footer-list">
           <li class="footer-item">
             <a
-              class="footer-contacts-link"
+              class="footer-link map"
               href="https://goo.gl/maps/pNAWCtYSXBHjVTxV9"
               target="_blank"
               rel="noopener noreferrer"
@@ -181,14 +184,12 @@
             >
           </li>
           <li class="footer-item">
-            <a class="footer-contacts-link" href="mailto:info@example.com" title="написать письмо"
+            <a class="footer-link" href="mailto:info@example.com" title="написать письмо"
               >info@example.com</a
             >
           </li>
           <li class="footer-item">
-            <a class="footer-contacts-link" href="+380961111111" title="позвонить"
-              >+38 096 111 11 11</a
-            >
+            <a class="footer-link" href="tel:+380961111111" title="позвонить">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
