--- a/portfolio.html
+++ b/portfolio.html
@@ -17,13 +17,14 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo-link" href="./index.html" lang="en"
-          ><span class="logo-first-part">Web</span><span class="logo-second-part">Studio</span></a
+        <a class="logo" href="./index.html" lang="en"
+          ><span class="logo-first-part">Web</span
+          ><span class="logo-second-dark-part">Studio</span></a
         >
         <ul class="header-nav-list">
           <li class="header-nav-item"><a class="header-nav-link" href="./index.html">Студия</a></li>
           <li class="header-nav-item">
-            <a class="header-nav-link" href="./portfolio.html">Портфолио</a>
+            <a class="header-nav-link active" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="header-nav-item"><a class="header-nav-link" href="#contacts">Контакты</a></li>
         </ul>
@@ -43,15 +44,21 @@
       </ul>
     </header>
     <main class="portfolio-main">
-      <section class="portfolio-classification">
+      <section class="filter">
         <!-- h2 будет скрыт css -->
-        <h2 class="portfolio-classification-title">Классификация направлений</h2>
-        <ul class="portfolio-classification-list">
-          <li class="portfolio-classification-item">Все</li>
-          <li class="portfolio-classification-item">Веб-сайты</li>
-          <li class="portfolio-classification-item">Приложения</li>
-          <li class="portfolio-classification-item">Дизайн</li>
-          <li class="portfolio-classification-item">Маркетинг</li>
+        <h2 class="filter-title">Фильтр</h2>
+        <ul class="filter-list">
+          <li class="filter-item"><button class="filter-button all" type="button">Все</button></li>
+          <li class="filter-item">
+            <button class="filter-button" type="button">Веб-сайты</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-button" type="button">Приложения</button>
+          </li>
+          <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
+          <li class="filter-item">
+            <button class="filter-button" type="button">Маркетинг</button>
+          </li>
         </ul>
       </section>
       <section class="portfolio">
@@ -78,7 +85,7 @@
               height="294"
             />
             <h3 class="portfolio-title-secondary">
-              Постер <span lang="en">New Orlean vs Golden Star</span>New Orlean vs Golden Star
+              Постер <span lang="en">New Orlean vs Golden Star</span>
             </h3>
             <p class="portfolio-text">Дизайн</p>
           </li>
@@ -165,14 +172,15 @@
       </section>
     </main>
     <footer class="footer" id="contacts">
-      <a class="footer-logo-link" href="./index.html" lang="en"
-        ><span class="logo-first-part">Web</span><span class="logo-second-part">Studio</span></a
+      <a class="logo" href="./index.html" lang="en"
+        ><span class="logo-first-part">Web</span
+        ><span class="logo-second-light-part">Studio</span></a
       >
       <address class="footer-address">
         <ul class="footer-list">
           <li class="footer-item">
             <a
-              class="footer-contacts-link"
+              class="footer-link map"
               href="https://goo.gl/maps/pNAWCtYSXBHjVTxV9"
               target="_blank"
               rel="noopener noreferrer"
@@ -181,14 +189,12 @@
             >
           </li>
           <li class="footer-item">
-            <a class="footer-contacts-link" href="mailto:info@example.com" title="написать письмо"
+            <a class="footer-link" href="mailto:info@example.com" title="написать письмо"
               >info@example.com</a
             >
           </li>
           <li class="footer-item">
-            <a class="footer-contacts-link" href="+380961111111" title="позвонить"
-              >+38 096 111 11 11</a
-            >
+            <a class="footer-link" href="tel:+380961111111" title="позвонить">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
