--- a/index.html
+++ b/index.html
@@ -10,73 +10,72 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>goit-markup-hw-02</title>
+    <title>webstudio</title>
     <link rel="stylesheet" href="./prettierrs/prettierrs.json" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo" href="./index.html" lang="en"
-          ><span class="logo-first-part">Web</span
-          ><span class="logo-second-dark-part">Studio</span></a
+      <nav class="nav">
+        <a class="link logo" href="./index.html" lang="en"
+          >Web<span class="logo-header">Studio</span></a
         >
-        <ul class="header-nav-list">
-          <li class="header-nav-item">
-            <a class="header-nav-link active" href="./index.html">Студия</a>
+        <ul class="list-nav">
+          <li class="item">
+            <a class="link active" href="./index.html">Студия</a>
           </li>
-          <li class="header-nav-item">
-            <a class="header-nav-link" href="./portfolio.html">Портфолио</a>
+          <li class="item">
+            <a class="link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li class="header-nav-item"><a class="header-nav-link" href="#contacts">Контакты</a></li>
+          <li class="item">
+            <a class="link" href="#contacts">Контакты</a>
+          </li>
         </ul>
       </nav>
       <!-- contacts -->
-      <ul class="header-contacts-list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link" href="mailto:info@devstudio.com" title="написать письмо"
+      <ul class="list-contacts">
+        <li class="item">
+          <a class="link" href="mailto:info@devstudio.com" title="написать письмо"
             >info@devstudio.com</a
           >
         </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link" href="tel:+380961111111" title="позвонить"
-            >+38 096 111 11 11</a
-          >
+        <li class="item">
+          <a class="link" href="tel:+380961111111" title="позвонить">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
-    <main class="studio-main">
+    <main class="studio">
       <!-- Slogan and button -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <h1 class="title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <button class="button" type="button">Заказать услугу</button>
       </section>
       <!--features-->
       <section class="features">
         <!--h2 будет скрыт, при подклюсчении СSS-->
-        <h2 class="features-title">Особенности</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-title-secondary">Внимание к деталям</h3>
-            <p class="features-text">
+        <h2 class="title section">Особенности</h2>
+        <ul class="list">
+          <li class="item">
+            <h3 class="title-features">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li class="features-item">
-            <h3 class="features-title-secondary">Пунктуальность</h3>
-            <p class="features-text">
+          <li class="item">
+            <h3 class="title-features">ПУНКТУАЛЬНОСТЬ</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li class="features-item">
-            <h3 class="features-title-secondary">Планирование</h3>
-            <p class="features-text">
+          <li class="item">
+            <h3 class="title-features">ПЛАНИРОВАНИЕ</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li class="features-item">
-            <h3 class="features-title-secondary">Современные технологии</h3>
-            <p class="features-text">
+          <li class="item">
+            <h3 class="title-features">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
           </li>
@@ -84,29 +83,29 @@
       </section>
       <!--What are we doing-->
       <section class="activity">
-        <h2 class="activity-title">Чем мы занимаемся</h2>
-        <ul class="activity-list">
-          <li class="activity-item">
+        <h2 class="title-activity">Чем мы занимаемся</h2>
+        <ul class="list">
+          <li class="item">
             <img
-              class="activity-image"
+              class="image"
               src="./images/box-1.jpg"
               alt="Разработчик верстает сайт с помощью компьютера, планшета, клавиатуры и заметок"
               width="370"
               height="294"
             />
           </li>
-          <li class="activity-item">
+          <li class="item">
             <img
-              class="activity-image"
+              class="image"
               src="./images/box-2.jpg"
               alt="Разработчик работает над разметкой сайта. Использует: смартфон, ноутбук, компьютер"
               width="370"
               height="294"
             />
           </li>
-          <li class="activity-item">
+          <li class="item">
             <img
-              class="activity-image"
+              class="image"
               src="./images/box-3.jpg"
               alt="Цветовая палитра на планшете."
               width="370"
@@ -117,65 +116,40 @@
       </section>
       <!--team-->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/photo-1.jpg"
-              alt="Мужчина"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title-secondary">Игорь Демьяненко</h3>
-            <p class="team-text" lang="en">Product Designer</p>
+        <h2 class="title-team">Наша команда</h2>
+        <ul class="list">
+          <li class="item">
+            <img class="image" src="./images/photo-1.jpg" alt="Мужчина" width="270" height="260" />
+            <h3 class="title-name">Игорь Демьяненко</h3>
+            <p class="text" lang="en">Product Designer</p>
           </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/photo-2.jpg"
-              alt="Женищина"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title-secondary">Ольга Репина</h3>
-            <p class="team-text" lang="en">Frontend Developer</p>
+          <li class="item">
+            <img class="image" src="./images/photo-2.jpg" alt="Женищина" width="270" height="260" />
+            <h3 class="title-name">Ольга Репина</h3>
+            <p class="text" lang="en">Frontend Developer</p>
           </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/photo-3.jpg"
-              alt="Мужчина"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title-secondary">Николай Тарасов</h3>
-            <p class="team-text" lang="en">Marketing</p>
+          <li class="item">
+            <img class="image" src="./images/photo-3.jpg" alt="Мужчина" width="270" height="260" />
+            <h3 class="title-name">Николай Тарасов</h3>
+            <p class="text" lang="en">Marketing</p>
           </li>
-          <li class="team-item">
-            <img
-              class="team-image"
-              src="./images/photo-4.jpg"
-              alt="Мужчина"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-title-secondary">Михаил Ермаков</h3>
-            <p class="team-text" lang="en">UI Designer</p>
+          <li class="item">
+            <img class="image" src="./images/photo-4.jpg" alt="Мужчина" width="270" height="260" />
+            <h3 class="title-name">Михаил Ермаков</h3>
+            <p class="text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer" id="contacts">
-      <a class="logo" href="./index.html" lang="en"
-        ><span class="logo-first-part">Web</span
-        ><span class="logo-second-light-part">Studio</span></a
+      <a class="link logo" href="./index.html" lang="en"
+        >Web<span class="logo-footer">Studio</span></a
       >
-      <address class="footer-address">
-        <ul class="footer-list">
-          <li class="footer-item">
+      <address class="address">
+        <ul class="list">
+          <li class="item">
             <a
-              class="footer-link map"
+              class="address link first"
               href="https://goo.gl/maps/pNAWCtYSXBHjVTxV9"
               target="_blank"
               rel="noopener noreferrer"
@@ -183,13 +157,13 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="footer-item">
-            <a class="footer-link" href="mailto:info@example.com" title="написать письмо"
+          <li class="item">
+            <a class="address link" href="mailto:info@example.com" title="написать письмо"
               >info@example.com</a
             >
           </li>
-          <li class="footer-item">
-            <a class="footer-link" href="tel:+380961111111" title="позвонить">+38 096 111 11 11</a>
+          <li class="item">
+            <a class="address link" href="+380961111111" title="позвонить">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
