--- a/portfolio.html
+++ b/portfolio.html
@@ -10,177 +10,232 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>goit-markup-hw-02</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="./prettierrs/prettierrs.json" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo" href="./index.html" lang="en"
-          ><span class="logo-first-part">Web</span
-          ><span class="logo-second-dark-part">Studio</span></a
+      <nav class="nav">
+        <a class="link logo" href="./index.html" lang="en"
+          >Web<span class="logo-header">Studio</span></a
         >
-        <ul class="header-nav-list">
-          <li class="header-nav-item"><a class="header-nav-link" href="./index.html">Студия</a></li>
-          <li class="header-nav-item">
-            <a class="header-nav-link active" href="./portfolio.html">Портфолио</a>
+        <ul class="list-nav">
+          <li class="item"><a class="link" href="./index.html">Студия</a></li>
+          <li class="item">
+            <a class="link active" href="./portfolio.html">Портфолио</a>
           </li>
-          <li class="header-nav-item"><a class="header-nav-link" href="#contacts">Контакты</a></li>
+          <li class="item"><a class="link" href="#contacts">Контакты</a></li>
         </ul>
       </nav>
       <!-- contacts -->
-      <ul class="header-contacts-list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link" href="mailto:info@devstudio.com" title="написать письмо"
+      <ul class="list-contacts">
+        <li class="item">
+          <a class="link" href="mailto:info@devstudio.com" title="написать письмо"
             >info@devstudio.com</a
           >
         </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link" href="tel:+380961111111" title="позвонить"
-            >+38 096 111 11 11</a
-          >
+        <li class="item">
+          <a class="link" href="tel:+380961111111" title="позвонить">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
-    <main class="portfolio-main">
-      <section class="filter">
-        <!-- h2 будет скрыт css -->
-        <h2 class="filter-title">Фильтр</h2>
-        <ul class="filter-list">
-          <li class="filter-item"><button class="filter-button all" type="button">Все</button></li>
-          <li class="filter-item">
-            <button class="filter-button" type="button">Веб-сайты</button>
+    <main>
+      <section class="portfolio">
+        <!-- h1 будет скрыт css -->
+        <h1 class="title section">Портфолио</h1>
+        <ul class="list filter">
+          <li class="item">
+            <button class="button active" type="button">Все</button>
           </li>
-          <li class="filter-item">
-            <button class="filter-button" type="button">Приложения</button>
+          <li class="item">
+            <button class="button" type="button">Веб-сайты</button>
           </li>
-          <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
-          <li class="filter-item">
-            <button class="filter-button" type="button">Маркетинг</button>
+          <li class="item">
+            <button class="button" type="button">Приложения</button>
+          </li>
+          <li class="item">
+            <button class="button" type="button">Дизайн</button>
+          </li>
+          <li class="item">
+            <button class="button" type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <section class="portfolio">
-        <!-- h2 будет скрыт css -->
-        <h2 class="portfolio-title">Портфолио</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-1.jpg"
-              alt="ноутбук"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary">Технокряк</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+        <ul class="list-example">
+          <li class="item">
+            <a class="link" href="./portfolio.html">
+              <img
+                class="image"
+                src="./images/portfolio/portfolio-1.jpg"
+                alt="ноутбук"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p>
+            </a>
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-2.jpg"
-              alt="спортсмены"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary">
-              Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h3>
-            <p class="portfolio-text">Дизайн</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html">
+              <img
+                class="image"
+                src="./images/portfolio/portfolio-2.jpg"
+                alt="спортсмены"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p class="text">Дизайн</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-3.jpg"
-              alt="пример логотипа"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="portfolio-text">Приложение</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html">
+              <img
+                class="image"
+                src="./images/portfolio/portfolio-3.jpg"
+                alt="пример логотипа"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="text">Приложение</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-4.jpg"
-              alt="наушники"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary">Проект <span lang="en">Prime</span></h3>
-            <p class="portfolio-text">Маркетинг</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html"
+              ><img
+                class="image"
+                src="./images/portfolio/portfolio-4.jpg"
+                alt="наушники"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Проект <span lang="en">Prime</span></h2>
+              <p class="text">Маркетинг</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-5.jpg"
-              alt="две коробки"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary">Проект <span lang="en">Boxes</span></h3>
-            <p class="portfolio-text">Приложение</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html"
+              ><img
+                class="image"
+                src="./images/portfolio/portfolio-5.jpg"
+                alt="две коробки"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+              <p class="text">Приложение</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-6.jpg"
-              alt="моноблок"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary" lang="en">Inspiration has no Borders</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html"
+              ><img
+                class="image"
+                src="./images/portfolio/portfolio-6.jpg"
+                alt="моноблок"
+                width="370"
+                height="294"
+              />
+              <h2 class="title" lang="en">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-7.jpg"
-              alt="журнал"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary">
-              Издание <span lang="en">Limited Edition</span>
-            </h3>
-            <p class="portfolio-text">Дизайн</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html">
+              <img
+                class="image"
+                src="./images/portfolio/portfolio-7.jpg"
+                alt="журнал"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+              <p class="text">Дизайн</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-8.jpg"
-              alt="бирка"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary">Проект <span lang="en">LAB</span></h3>
-            <p class="portfolio-text">Маркетинг</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html"
+              ><img
+                class="image"
+                src="./images/portfolio/portfolio-8.jpg"
+                alt="бирка"
+                width="370"
+                height="294"
+              />
+              <h2 class="title">Проект <span class="part" lang="en">LAB</span></h2>
+              <p class="text">Маркетинг</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-image"
-              src="./images/portfolio/portfolio-9.jpg"
-              alt="ноутбук"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title-secondary" lang="en">Growing Business</h3>
-            <p class="portfolio-text">Приложение</p>
+          <li class="item">
+            <a class="link" href="./portfolio.html"
+              ><img
+                class="image"
+                src="./images/portfolio/portfolio-9.jpg"
+                alt="ноутбук"
+                width="370"
+                height="294"
+              />
+              <h2 class="title" lang="en">Growing Business</h2>
+              <p class="text">Приложение</p>
+              <p class="text description">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
+                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
+                лице.
+              </p></a
+            >
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer" id="contacts">
-      <a class="logo" href="./index.html" lang="en"
-        ><span class="logo-first-part">Web</span
-        ><span class="logo-second-light-part">Studio</span></a
+      <a class="link logo" href="./index.html" lang="en"
+        >Web<span class="logo-footer">Studio</span></a
       >
-      <address class="footer-address">
-        <ul class="footer-list">
-          <li class="footer-item">
+      <address class="address">
+        <ul class="list">
+          <li class="item">
             <a
-              class="footer-link map"
+              class="address link first"
               href="https://goo.gl/maps/pNAWCtYSXBHjVTxV9"
               target="_blank"
               rel="noopener noreferrer"
@@ -188,13 +243,13 @@
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li class="footer-item">
-            <a class="footer-link" href="mailto:info@example.com" title="написать письмо"
+          <li class="item">
+            <a class="address link" href="mailto:info@example.com" title="написать письмо"
               >info@example.com</a
             >
           </li>
-          <li class="footer-item">
-            <a class="footer-link" href="tel:+380961111111" title="позвонить">+38 096 111 11 11</a>
+          <li class="item">
+            <a class="address link" href="tel:+380961111111" title="позвонить">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
