изменения после  проверки
кнопки и удаление текста в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
         <h1 class="title section">Портфолио</h1>
         <ul class="list filter">
           <li class="item">
-            <button class="button active" type="button">Все</button>
+            <button class="button" type="button">Все</button>
           </li>
           <li class="item">
             <button class="button" type="button">Веб-сайты</button>
@@ -73,11 +73,6 @@
               />
               <h2 class="title">Технокряк</h2>
               <p class="text">Веб-сайт</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p>
             </a>
           </li>
           <li class="item">
@@ -90,12 +85,7 @@
                 height="294"
               />
               <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="text">Дизайн</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <p class="text">Дизайн</p></a
             >
           </li>
           <li class="item">
@@ -108,12 +98,7 @@
                 height="294"
               />
               <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="text">Приложение</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <p class="text">Приложение</p></a
             >
           </li>
           <li class="item">
@@ -126,12 +111,7 @@
                 height="294"
               />
               <h2 class="title">Проект <span lang="en">Prime</span></h2>
-              <p class="text">Маркетинг</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <p class="text">Маркетинг</p></a
             >
           </li>
           <li class="item">
@@ -144,12 +124,7 @@
                 height="294"
               />
               <h2 class="title">Проект <span lang="en">Boxes</span></h2>
-              <p class="text">Приложение</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <p class="text">Приложение</p></a
             >
           </li>
           <li class="item">
@@ -162,12 +137,7 @@
                 height="294"
               />
               <h2 class="title" lang="en">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <p class="text">Веб-сайт</p></a
             >
           </li>
           <li class="item">
@@ -180,12 +150,7 @@
                 height="294"
               />
               <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="text">Дизайн</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <p class="text">Дизайн</p></a
             >
           </li>
           <li class="item">
@@ -197,13 +162,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="title">Проект <span class="part" lang="en">LAB</span></h2>
-              <p class="text">Маркетинг</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <h2 class="title">Проект <span class="part-name" lang="en">LAB</span></h2>
+              <p class="text">Маркетинг</p></a
             >
           </li>
           <li class="item">
@@ -216,12 +176,7 @@
                 height="294"
               />
               <h2 class="title" lang="en">Growing Business</h2>
-              <p class="text">Приложение</p>
-              <p class="text description">
-                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
-                Все это позволит посетителю получить исчерпывающие сведения о компании или частном
-                лице.
-              </p></a
+              <p class="text">Приложение</p></a
             >
           </li>
         </ul>
